--- a/fmmetcalf_p1.html
+++ b/fmmetcalf_p1.html
@@ -4,11 +4,134 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="stylesheet.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://kit.fontawesome.com/53ad6b9612.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <h1>Business Analytics Student Survey</h1>
+    <form>
+      <p>
+        <label for="country">
+          My home country is
+          <input type="text" id="country" name="country" autofocus />
+        </label>
+        <br />
+        <label for="home_town">
+          My home town is
+          <a
+            href=""
+            data-bs-toggle="tooltip"
+            data-bs-title="What town did you live in before coming to college?"
+          >
+            <i class="fa-solid fa-circle-question"></i>
+          </a>
+          <input type="text" id="home_town" name="home_town" required />
+        </label>
+        <br />
+        <label for="home_state">
+          My home state is
+          <select name="home_state" id="home_state" required>
+            <option value="">-- choose state/territory --</option>
+            <option value="AL">AL</option>
+            <option value="AK">AK</option>
+            <option value="AZ">AZ</option>
+            <option value="AR">AR</option>
+            <option value="CA">CA</option>
+            <option value="CO">CO</option>
+            <option value="CT">CT</option>
+            <option value="DE">DE</option>
+            <option value="FL">FL</option>
+            <option value="GA">GA</option>
+            <option value="HI">HI</option>
+            <option value="ID">ID</option>
+            <option value="IL">IL</option>
+            <option value="IN">IN</option>
+            <option value="IA">IA</option>
+            <option value="KS">KS</option>
+            <option value="KY">KY</option>
+            <option value="LA">LA</option>
+            <option value="ME">ME</option>
+            <option value="MD">MD</option>
+            <option value="MA">MA</option>
+            <option value="MI">MI</option>
+            <option value="MN">MN</option>
+            <option value="MS">MS</option>
+            <option value="MO">MO</option>
+            <option value="MT">MT</option>
+            <option value="NE">NE</option>
+            <option value="NV">NV</option>
+            <option value="NH">NH</option>
+            <option value="NJ">NJ</option>
+            <option value="NM">NM</option>
+            <option value="NY">NY</option>
+            <option value="NC">NC</option>
+            <option value="ND">ND</option>
+            <option value="OH">OH</option>
+            <option value="OK">OK</option>
+            <option value="OR">OR</option>
+            <option value="PA">PA</option>
+            <option value="RI">RI</option>
+            <option value="SC">SC</option>
+            <option value="SD">SD</option>
+            <option value="TN">TN</option>
+            <option value="TX">TX</option>
+            <option value="UT">UT</option>
+            <option value="VT">VT</option>
+            <option value="VA">VA</option>
+            <option value="WA">WA</option>
+            <option value="WV">WV</option>
+            <option value="WI">WI</option>
+            <option value="WY">WY</option>
+            <!-- Added Washington D.C. -->
+            <option value="DC">DC - Washington D.C.</option>
+            <!-- Added U.S. Territories -->
+            <option value="AS">AS - American Samoa</option>
+            <option value="GU">GU - Guam</option>
+            <option value="MP">MP - Northern Mariana Islands</option>
+            <option value="PR">PR - Puerto Rico</option>
+            <option value="VI">VI - U.S. Virgin Islands</option>
+          </select>
+        </label>
+        <br />
+        <label for="impression">
+          My impression of the BAIS major is
+          <select name="impression" id="impression">
+            <option value="">-- choose satisfaction --</option>
+            <option value="5">Very Positive</option>
+            <option value="4">Positive</option>
+            <option value="3">Neutral</option>
+            <option value="2">Negative</option>
+            <option value="1">Very Negative</option>
+          </select>
+        </label>
+      </p>
+    </form>
+    <div class="d-flex justify-content-between align-items-center">
+        <p>page 1 of 2</p>
     <form action="fmmetcalf_p2.html" method="GET">
       <button type="submit">Next</button>
     </form>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      const tooltipTriggersList = document.querySelectorAll(
+        '[data-bs-toggle="tooltip"]'
+      );
+      const tooltipList = [...tooltipTriggersList].map(
+        (tooltipTriggerEl) => new bootstrap.Tooltip(tooltipTriggerEl)
+      );
+    </script>
   </body>
 </html>
