added bootstrap everywhere

--- a/fmmetcalf_p1.html
+++ b/fmmetcalf_p1.html
@@ -34,12 +34,12 @@
           >
             <i class="fa-solid fa-circle-question"></i>
           </a>
-          <input type="text" id="home_town" name="home_town" required />
+          <input type="text" id="home_town" name="home_town" required/>
         </label>
         <br />
         <label for="home_state">
           My home state is
-          <select name="home_state" id="home_state" required>
+          <select name="home_state" id="home_state">
             <option value="">-- choose state/territory --</option>
             <option value="AL">AL</option>
             <option value="AK">AK</option>
@@ -104,7 +104,7 @@
         <br />
         <label for="impression">
           My impression of the BAIS major is
-          <select name="impression" id="impression">
+          <select name="impression" id="impression" required >
             <option value="">-- choose satisfaction --</option>
             <option value="5">Very Positive</option>
             <option value="4">Positive</option>
