finished spacing and content for page 2

--- a/fmmetcalf_p2.html
+++ b/fmmetcalf_p2.html
@@ -14,6 +14,134 @@
   </head>
   <body>
     <h1>Business Analytics Student Survey</h1>
+    <form>
+      <div class="mb-3">
+        <fieldset>
+          <label> I am finishing my </label><br />
+
+          <label for="first">
+            <input
+              type="radio"
+              id="first"
+              name="year_in_college"
+              value="1"
+              required
+            />first year at Iowa </label
+          ><br />
+          <label for="second">
+            <input
+              type="radio"
+              id="second"
+              name="year_in_college"
+              value="2"
+              required
+            />second year at Iowa </label
+          ><br />
+          <label for="third">
+            <input
+              type="radio"
+              id="third"
+              name="year_in_college"
+              value="3"
+              required
+            />third year at Iowa </label
+          ><br />
+          <label for="fourth">
+            <input
+              type="radio"
+              id="fourth"
+              name="year_in_college"
+              value="4"
+              required
+            />fourth year at Iowa </label
+          ><br />
+          <label for="fifth">
+            <input
+              type="radio"
+              id="fifth"
+              name="year_in_college"
+              value="5"
+              required
+            />fifth or more year at Iowa </label
+          ><br />
+        </fieldset>
+      </div>
+
+      <div class="mb-3">
+        <fieldset>
+          <label> BAIS core class I have completed </label><br />
+          <label for="infosys">
+            <input type="checkbox" id="infosys" name="class" value="infosys" />
+            Information Systems </label
+          ><br />
+
+          <label for="operations">
+            <input
+              type="checkbox"
+              id="operations"
+              name="class"
+              value="operations"
+            />
+            Operations </label
+          ><br />
+
+          <label for="foundations">
+            <input
+              type="checkbox"
+              id="foundations"
+              name="class"
+              value="foundations"
+            />
+            Foundations of Business Analytics </label
+          ><br />
+          <label for="computational">
+            <input
+              type="checkbox"
+              id="computational"
+              name="class"
+              value="computational"
+            />
+            Computational Thinking </label
+          ><br />
+          <label for="database">
+            <input
+              type="checkbox"
+              id="database"
+              name="class"
+              value="database"
+            />
+            Database Management </label
+          ><br />
+          <label for="data_wrangling">
+            <input
+              type="checkbox"
+              id="data_wrangling"
+              name="class"
+              value="data_wrangling"
+            />
+            Data Wrangling </label
+          ><br />
+          <label for="data_mining">
+            <input
+              type="checkbox"
+              id="data_mining"
+              name="class"
+              value="data_mining"
+            />
+            Data Mining </label
+          ><br />
+          <label for="capstone">
+            <input
+              type="checkbox"
+              id="capstone"
+              name="class"
+              value="capstone"
+            />
+            BAIS Capstone </label
+          ><br />
+        </fieldset>
+      </div>
+    </form>
     <form action="fmmetcalf_ty.html" method="GET">
       <button type="submit">Finish</button>
     </form>
