--- a/fmmetcalf_p2.html
+++ b/fmmetcalf_p2.html
@@ -142,9 +142,12 @@
         </fieldset>
       </div>
     </form>
-    <form action="fmmetcalf_ty.html" method="GET">
-      <button type="submit">Finish</button>
-    </form>
+    <div class="d-flex justify-content-between align-items-center">
+      <p>page 2 of 2</p>
+      <form action="fmmetcalf_ty.html" method="GET">
+        <button type="submit">Finish</button>
+      </form>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
