--- a/fmmetcalf_p1.html
+++ b/fmmetcalf_p1.html
@@ -18,10 +18,10 @@
   </head>
   <body>
     <h1>Business Analytics Student Survey</h1>
-    <form>
+    <form action="fmmetcalf_p2.html" method="GET">
       <div class="mb-3">
         <label for="country"> My home country is</label><br />
-        <input type="text" id="country" name="country" class="ps-3" autofocus />
+        <input type="text" id="country" name="country" autofocus />
       </div>
 
       <div class="mb-3">
@@ -113,13 +113,11 @@
           <option value="1">Very Negative</option>
         </select>
       </div>
+      <div class="d-flex justify-content-start align-items-center gap-2">
+        <p class="mb-0">page 1 of 2</p>
+        <button type="submit" class="btn btn-primary">Next</button>
+      </div>
     </form>
-    <div class="d-flex justify-content-between align-items-center">
-      <p>page 1 of 2</p>
-      <form action="fmmetcalf_p2.html" method="GET">
-        <button type="submit">Next</button>
-      </form>
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
