--- a/fmmetcalf_p2.html
+++ b/fmmetcalf_p2.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>Business Analytics Student Survey</h1>
-    <form>
+    <form action="fmmetcalf_ty.html" method="GET">
       <div class="mb-3">
         <fieldset>
           <label> I am finishing my </label><br />
@@ -141,17 +141,33 @@
           ><br />
         </fieldset>
       </div>
+      <div class="d-flex justify-content-start align-items-center gap-2">
+        <p class="mb-0">page 2 of 2</p>
+        <button type="submit" class="btn btn-primary">Next</button>
+      </div>
     </form>
-    <div class="d-flex justify-content-between align-items-center">
-      <p>page 2 of 2</p>
-      <form action="fmmetcalf_ty.html" method="GET">
-        <button type="submit">Finish</button>
-      </form>
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const form = document.querySelector("form");
+        const checkboxes = document.querySelectorAll("input[name='class']");
+
+        form.addEventListener("submit", function (event) {
+          let checked = false;
+          checkboxes.forEach((checkbox) => {
+            if (checkbox.checked) checked = true;
+          });
+
+          if (!checked) {
+            alert("Please select at least one BAIS core class.");
+            event.preventDefault(); // Prevent form submission
+          }
+        });
+      });
+    </script>
   </body>
 </html>
