Made changes to make everything validated

--- a/fmmetcalf_p1.html
+++ b/fmmetcalf_p1.html
@@ -25,14 +25,17 @@
       </div>
 
       <div class="mb-3">
-        <label for="home_town"> My home town is</label>
-        <a
-          href=""
+        <label for="home_town">My home town is</label>
+        <button
+          type="button"
+          class="btn btn-link p-0"
           data-bs-toggle="tooltip"
           data-bs-title="What town did you live in before coming to college?"
+          aria-label="More information about home town"
         >
-          <i class="fa-solid fa-circle-question"></i> </a
-        ><br />
+          <i class="fa-solid fa-circle-question"></i>
+        </button>
+        <br />
         <input type="text" id="home_town" name="home_town" required />
       </div>
 
