--- a/fmmetcalf_p2.html
+++ b/fmmetcalf_p2.html
@@ -17,7 +17,7 @@
     <form action="fmmetcalf_ty.html" method="GET">
       <div class="mb-3">
         <fieldset>
-          <label> I am finishing my </label><br />
+          <legend>I am finishing my</legend>
 
           <label for="first">
             <input
@@ -69,7 +69,7 @@
 
       <div class="mb-3">
         <fieldset>
-          <label> BAIS core class I have completed </label><br />
+          <legend>BAIS core class I have completed</legend>
           <label for="infosys">
             <input type="checkbox" id="infosys" name="class" value="infosys" />
             Information Systems </label
