--- a/index.html
+++ b/index.html
@@ -13,15 +13,28 @@
     />
   </head>
   <body>
-    <h1>Business Analytics Student Survey</h1>
-    <p>This survey should take you less than one minute to complete.</p>
-    <p>
-      The department will use the results to help us better understadn the BAIS
-      student population.
-    </p>
-    <form action="fmmetcalf_p1.html" method="GET">
-      <button type="submit">Start Survey</button>
-    </form>
+    <div class="container">
+      <form action="fmmetcalf_p1.html" method="GET">
+        <div class="welcome-box text-center">
+          <h1 class="fs-4 mb-5">
+            Business Analytics<br />
+            Student Survey
+          </h1>
+          <p class="mb-5">
+            This survey should take you less than one minute to complete.
+          </p>
+          <p class="mb-5">
+            The department will use the results to help us better understand the
+            BAIS student population.
+          </p>
+
+          <div class="d-flex justify-content-center align-items-center gap-2">
+            <button type="submit" class="btn btn-primary">Start Survey</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
