--- a/fmmetcalf_p2.html
+++ b/fmmetcalf_p2.html
@@ -13,139 +13,162 @@
     />
   </head>
   <body>
-    <h1>Business Analytics Student Survey</h1>
-    <form action="fmmetcalf_ty.html" method="GET">
-      <div class="mb-3">
-        <fieldset>
-          <legend>I am finishing my</legend>
+    <div class="container">
+      <h1 class="fs-4 mb-5">Business Analytics<br />Student Survey</h1>
+      <form action="fmmetcalf_ty.html" method="GET">
+        <div class="mb-3">
+          <fieldset>
+            <legend>I am finishing my</legend>
+            <div class="d-flex flex-column align-items-start ms-4">
+              <!-- Added ms-4 for indentation -->
+              <label for="first">
+                <input
+                  type="radio"
+                  id="first"
+                  name="year_in_college"
+                  value="1"
+                  required
+                />
+                first year at Iowa
+              </label>
+              <label for="second">
+                <input
+                  type="radio"
+                  id="second"
+                  name="year_in_college"
+                  value="2"
+                  required
+                />
+                second year at Iowa
+              </label>
+              <label for="third">
+                <input
+                  type="radio"
+                  id="third"
+                  name="year_in_college"
+                  value="3"
+                  required
+                />
+                third year at Iowa
+              </label>
+              <label for="fourth">
+                <input
+                  type="radio"
+                  id="fourth"
+                  name="year_in_college"
+                  value="4"
+                  required
+                />
+                fourth year at Iowa
+              </label>
+              <label for="fifth">
+                <input
+                  type="radio"
+                  id="fifth"
+                  name="year_in_college"
+                  value="5"
+                  required
+                />
+                fifth or more year at Iowa
+              </label>
+            </div>
+          </fieldset>
+        </div>
 
-          <label for="first">
-            <input
-              type="radio"
-              id="first"
-              name="year_in_college"
-              value="1"
-              required
-            />first year at Iowa </label
-          ><br />
-          <label for="second">
-            <input
-              type="radio"
-              id="second"
-              name="year_in_college"
-              value="2"
-              required
-            />second year at Iowa </label
-          ><br />
-          <label for="third">
-            <input
-              type="radio"
-              id="third"
-              name="year_in_college"
-              value="3"
-              required
-            />third year at Iowa </label
-          ><br />
-          <label for="fourth">
-            <input
-              type="radio"
-              id="fourth"
-              name="year_in_college"
-              value="4"
-              required
-            />fourth year at Iowa </label
-          ><br />
-          <label for="fifth">
-            <input
-              type="radio"
-              id="fifth"
-              name="year_in_college"
-              value="5"
-              required
-            />fifth or more year at Iowa </label
-          ><br />
-        </fieldset>
-      </div>
+        <div class="mb-3">
+          <fieldset>
+            <legend>BAIS core class I have completed</legend>
+            <div class="d-flex flex-column align-items-start ms-4">
+              <!-- Added ms-4 for indentation -->
+              <label for="infosys">
+                <input
+                  type="checkbox"
+                  id="infosys"
+                  name="class"
+                  value="infosys"
+                />
+                Information Systems
+              </label>
+              <label for="operations">
+                <input
+                  type="checkbox"
+                  id="operations"
+                  name="class"
+                  value="operations"
+                />
+                Operations
+              </label>
+              <label for="foundations">
+                <input
+                  type="checkbox"
+                  id="foundations"
+                  name="class"
+                  value="foundations"
+                />
+                Foundations of Business Analytics
+              </label>
+              <label for="computational">
+                <input
+                  type="checkbox"
+                  id="computational"
+                  name="class"
+                  value="computational"
+                />
+                Computational Thinking
+              </label>
+              <label for="database">
+                <input
+                  type="checkbox"
+                  id="database"
+                  name="class"
+                  value="database"
+                />
+                Database Management
+              </label>
+              <label for="data_wrangling">
+                <input
+                  type="checkbox"
+                  id="data_wrangling"
+                  name="class"
+                  value="data_wrangling"
+                />
+                Data Wrangling
+              </label>
+              <label for="data_mining">
+                <input
+                  type="checkbox"
+                  id="data_mining"
+                  name="class"
+                  value="data_mining"
+                />
+                Data Mining
+              </label>
+              <label for="capstone">
+                <input
+                  type="checkbox"
+                  id="capstone"
+                  name="class"
+                  value="capstone"
+                />
+                BAIS Capstone
+              </label>
+            </div>
+          </fieldset>
+        </div>
 
-      <div class="mb-3">
-        <fieldset>
-          <legend>BAIS core class I have completed</legend>
-          <label for="infosys">
-            <input type="checkbox" id="infosys" name="class" value="infosys" />
-            Information Systems </label
-          ><br />
+        <div class="d-flex justify-content-center align-items-center gap-2">
+          <p class="mb-0" style="margin-left: 10px">page 2 of 2</p>
+          <button
+            type="submit"
+            class="btn btn-primary"
+            style="margin-left: 130px"
+          >
+            Finish
+          </button>
+        </div>
+      </form>
+    </div>
 
-          <label for="operations">
-            <input
-              type="checkbox"
-              id="operations"
-              name="class"
-              value="operations"
-            />
-            Operations </label
-          ><br />
-
-          <label for="foundations">
-            <input
-              type="checkbox"
-              id="foundations"
-              name="class"
-              value="foundations"
-            />
-            Foundations of Business Analytics </label
-          ><br />
-          <label for="computational">
-            <input
-              type="checkbox"
-              id="computational"
-              name="class"
-              value="computational"
-            />
-            Computational Thinking </label
-          ><br />
-          <label for="database">
-            <input
-              type="checkbox"
-              id="database"
-              name="class"
-              value="database"
-            />
-            Database Management </label
-          ><br />
-          <label for="data_wrangling">
-            <input
-              type="checkbox"
-              id="data_wrangling"
-              name="class"
-              value="data_wrangling"
-            />
-            Data Wrangling </label
-          ><br />
-          <label for="data_mining">
-            <input
-              type="checkbox"
-              id="data_mining"
-              name="class"
-              value="data_mining"
-            />
-            Data Mining </label
-          ><br />
-          <label for="capstone">
-            <input
-              type="checkbox"
-              id="capstone"
-              name="class"
-              value="capstone"
-            />
-            BAIS Capstone </label
-          ><br />
-        </fieldset>
-      </div>
-      <div class="d-flex justify-content-start align-items-center gap-2">
-        <p class="mb-0">page 2 of 2</p>
-        <button type="submit" class="btn btn-primary">Next</button>
-      </div>
-    </form>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
