--- a/fmmetcalf_ty.html
+++ b/fmmetcalf_ty.html
@@ -12,10 +12,22 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <h1>Business Analytics Student Survey</h1>
-    <h1>Thank you!!</h1>
-    <p>Your response has been saved.</p>
+  <body
+    class="d-flex flex-column align-items-center"
+    style="height: 100vh; margin: 0"
+  >
+    <div class="text-center mt-4">
+      <h1>
+        Business Analytics<br />
+        Student Survey
+      </h1>
+    </div>
+    <div class="text-center mt-4 mb-4">
+      <h1>Thank you!!</h1>
+    </div>
+    <div class="text-center mb-4">
+      <p>Your response has been saved.</p>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
