Added styling and image to thank you page

--- a/fmmetcalf_ty.html
+++ b/fmmetcalf_ty.html
@@ -33,5 +33,12 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <div class="text-center mt-4">
+      <img
+        src="image/Types_of_Business_Analytics.avif"
+        alt="Picture at end of survey"
+        style="width: 600px; height: 300px"
+      />
+    </div>
   </body>
 </html>
